replace PlayerLoginEvent with PlayerConnectionValidateLoginEvent