@@ -1,6 +1,7 @@
 plugins {
-    id "de.eldoria.plugin-yml.paper" version "0.7.1"
     id "com.gradleup.shadow" version "8.3.6"
+    id "xyz.jpenilla.run-paper" version "2.3.1"
+    id "de.eldoria.plugin-yml.paper" version "0.7.1"
 }
 
 repositories {
@@ -45,12 +46,16 @@ tasks {
         // Changing name of the artifact.
         archiveFileName = "${rootProject.name}-${project.version}.jar"
     }
+    runServer {
+        minecraftVersion("1.21.7")
+        jvmArgs("--enable-preview")
+    }
 }
 
 paper {
     name = "Azure"
     main = "cloud.grabsky.azure.Azure"
-    apiVersion = "1.21.4"
+    apiVersion = "1.21.7"
     serverDependencies {
         // Required
         "LuckPerms"      { load = "BEFORE"; required = true }
